fixed overflow-x for smaller viewports(devices)

--- a/template_website/assets/css/style.css
+++ b/template_website/assets/css/style.css
@@ -25,6 +25,13 @@ body {
   font-weight: normal;
   font-style: normal;
   color: #121212; }
+  /* fix overflow for smaller devicess */
+  @media(max-width:768px) {
+    body{
+      overflow-x: hidden;
+      max-width: 100%;
+    }
+  }
 
 * {
   margin: 0;
